k8s/istio/semaphore-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: semaphore
  labels:
    istio-injection: enabled
